snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha1
b8ccbd6eb3ccb499cafde9da1f338d604e9d700d